# final_challenge2023

./: .gitignore  CMakeLists.txt  README.md  package.xml  params.yaml  python3_requirements.txt  requirements.txt
city_driving/brain/: .brain.py.swp  README.txt  brain.py
city_driving/line_following/: color_segmentation_line_following.py  homography_transformer.py  line_detector.py  line_following_controller.py  parking_controller.py
city_driving/stop_detector/: convert2python2.py  detector.py  stop_detector.py  test_detector.py  test_detector2.py
documentation/: Setup Stopsign Detector.md
launch/: detect_stopsign.launch  line_following.launch  main.launch
msg/: DetectedObject.msg
